--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Web Development Tech Challenge</title>
+    <title>Doline</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link
     rel="stylesheet"
@@ -21,11 +21,11 @@
             <li class="hamburger"><i class="fas fa-bars fs-15"></i></li>
         </div>
         <ul class="menu">
-          <li><a class="navigation" href="#about">À propos</a></li>
-          <li><a class="navigation2" href="#formation">Formations</a></li>
-          <li><a class="navigation3" href="#skill">Skills</a></li>
-          <li><a class="navigation4" href="#projet">Projets</a></li>
-          <li><a class="navigation5" href="#contact">Contact</a></li>
+          <li><a href="#about">À propos</a></li>
+          <li><a href="#formation">Formations</a></li>
+          <li><a href="#skill">Skills</a></li>
+          <li><a href="#projet">Projets</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </header>
       <section id="heros">
@@ -155,7 +155,7 @@
                 <div class="offer-elem-text">
                   <p>ToDoList<span>Html/Css/Js</span></p>
                   <div class="contenu">
-                      <button class="btn middle"><a href="./todolist/src/index.html" target="_blank">découvrir</a></button>
+                      <button class="btn middle"><a href="#" target="_blank">découvrir</a></button>
                       <a href="https://github.com/GwendolineMartin/ToDoList"><i class="fab fa-github fs-30"></i></a>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
             <div class="offer-elem-text">
               <p>Florette<span>Html/Css</span></p>
               <div class="contenu">
-                <button class="btn middle"><a href="./florette/src/index.html" target="_blank">découvrir</a></button>
+                <button class="btn middle"><a href="#" target="_blank">découvrir</a></button>
                 <a href="https://github.com/GwendolineMartin/Cafe-Florette"><i class="fab fa-github fs-30"></i></a>
               </div>
           </div>
@@ -175,7 +175,7 @@
             <div class="offer-elem-text">
               <p>Limo<span>Html/Css</span></p>
               <div class="contenu">
-                  <button class="btn middle"><a href="./limo/src/index.html" target="_blank">découvrir</a></button>
+                  <button class="btn middle"><a href="#" target="_blank">découvrir</a></button>
                   <a href="https://github.com/GwendolineMartin/Agence-Limo"><i class="fab fa-github fs-30"></i></a>
                 </div>
             </div>
