--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Doline</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -16,7 +16,7 @@
       <header>
         <div class="row">
           <h2 class="vp-logo">
-            <a href="#"><img src="./assets/logo.svg" alt="logo"/></a>
+            <a href="#"><img src="./assets/img/logo.svg" alt="logo"/></a>
           </h2>
             <li class="hamburger"><i class="fas fa-bars fs-15"></i></li>
         </div>
@@ -151,7 +151,7 @@
         <h4 class="title pink">Mes projets</h4>
         <ul class="offer-list">
             <li class="offer-elem">
-                <img src="./assets/todolist6.png" alt="king" class="offer-elem-img">
+                <img src="./assets/img/todolist6.png" alt="king" class="offer-elem-img">
                 <div class="offer-elem-text">
                   <p>ToDoList<span>Html/Css/Js</span></p>
                   <div class="contenu">
@@ -161,7 +161,7 @@
                 </div>
               </li>
           <li class="offer-elem">
-            <img src="./assets/café.png" alt="princesse" class="offer-elem-img">
+            <img src="./assets/img/café.png" alt="princesse" class="offer-elem-img">
             <div class="offer-elem-text">
               <p>Florette<span>Html/Css</span></p>
               <div class="contenu">
@@ -171,7 +171,7 @@
           </div>
           </li>
           <li class="offer-elem">
-            <img src="./assets/immo.png" alt="queen" class="offer-elem-img">
+            <img src="./assets/img/immo.png" alt="queen" class="offer-elem-img">
             <div class="offer-elem-text">
               <p>Limo<span>Html/Css</span></p>
               <div class="contenu">
@@ -196,6 +196,6 @@
       </div>
       </form>
     </section>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
