--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="offer-elem-text">
                   <p>ToDoList<span>Html/Css/Js</span></p>
                   <div class="contenu">
-                      <button class="btn middle"><a href="#" target="_blank">découvrir</a></button>
+                      <button class="btn middle"><a href="./assets/pages/todolist.html" target="_blank">découvrir</a></button>
                       <a href="https://github.com/GwendolineMartin/ToDoList"><i class="fab fa-github fs-30"></i></a>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
             <div class="offer-elem-text">
               <p>Florette<span>Html/Css</span></p>
               <div class="contenu">
-                <button class="btn middle"><a href="#" target="_blank">découvrir</a></button>
+                <button class="btn middle"><a href="./assets/pages/café.html" target="_blank">découvrir</a></button>
                 <a href="https://github.com/GwendolineMartin/Cafe-Florette"><i class="fab fa-github fs-30"></i></a>
               </div>
           </div>
@@ -175,7 +175,7 @@
             <div class="offer-elem-text">
               <p>Limo<span>Html/Css</span></p>
               <div class="contenu">
-                  <button class="btn middle"><a href="#" target="_blank">découvrir</a></button>
+                  <button class="btn middle"><a href="./assets/pages/limo.html" target="_blank">découvrir</a></button>
                   <a href="https://github.com/GwendolineMartin/Agence-Limo"><i class="fab fa-github fs-30"></i></a>
                 </div>
             </div>
