--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <p>ToDoList<span>Html/Css/Js</span></p>
                   <div class="contenu">
                       <button class="btn middle"><a href="./assets/pages/todolist.html" target="_blank">découvrir</a></button>
-                      <a href="https://github.com/GwendolineMartin/ToDoList"><i class="fab fa-github fs-30"></i></a>
+                      <a href="https://github.com/GwendolineMartin/ToDoList" target="_blank"><i class="fab fa-github fs-30"></i></a>
                     </div>
                 </div>
               </li>
@@ -166,7 +166,7 @@
               <p>Florette<span>Html/Css</span></p>
               <div class="contenu">
                 <button class="btn middle"><a href="./assets/pages/café.html" target="_blank">découvrir</a></button>
-                <a href="https://github.com/GwendolineMartin/Cafe-Florette"><i class="fab fa-github fs-30"></i></a>
+                <a href="https://github.com/GwendolineMartin/Cafe-Florette" target="_blank"><i class="fab fa-github fs-30"></i></a>
               </div>
           </div>
           </li>
@@ -176,7 +176,7 @@
               <p>Limo<span>Html/Css</span></p>
               <div class="contenu">
                   <button class="btn middle"><a href="./assets/pages/limo.html" target="_blank">découvrir</a></button>
-                  <a href="https://github.com/GwendolineMartin/Agence-Limo"><i class="fab fa-github fs-30"></i></a>
+                  <a href="https://github.com/GwendolineMartin/Agence-Limo" target="_blank"><i class="fab fa-github fs-30"></i></a>
                 </div>
             </div>
           </li>
