--- a/assets/pages/where.html
+++ b/assets/pages/where.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="../../css/café.css">
-	<link rel="stylesheet" media="only screen and (max-width:500px)" href="../../css/café.mobile.css">
+	<link rel="stylesheet" href="../../css/cafe.css">
+	<link rel="stylesheet" media="only screen and (max-width:500px)" href="../../css/cafe.mobile.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/43d105d4f0.js" crossorigin="anonymous"></script>
 	<title>Cafe florette | Accueil</title>
@@ -16,10 +16,10 @@
 	<header class="header">
 		<nav>
 			<h1>
-				<a href="./café.html">CAFE FLORETTE</a>
+				<a href="./cafe.html">CAFE FLORETTE</a>
 			</h1>
 			<ul>
-				<li><a href="./café.html">Accueil</a></li>
+				<li><a href="./cafe.html">Accueil</a></li>
 				<li><a href="./where.html" class="active">Nous trouver</a></li>
 				<li><a href="./contact.html">Contact</a></li>
 			</ul>
