--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h4 class="title pink">Mes projets</h4>
         <ul class="offer-list">
             <li class="offer-elem">
-                <img src="./assets/img/todolist6.png" alt="king" class="offer-elem-img">
+                <img src="./assets/img/todolist6.png" alt="todolist" class="offer-elem-img">
                 <div class="offer-elem-text">
                   <p>ToDoList<span>Html/Css/Js</span></p>
                   <div class="contenu">
@@ -161,7 +161,7 @@
                 </div>
               </li>
           <li class="offer-elem">
-            <img src="./assets/img/café.png" alt="princesse" class="offer-elem-img">
+            <img src="./assets/img/cafe.png" alt="cafe" class="offer-elem-img">
             <div class="offer-elem-text">
               <p>Florette<span>Html/Css</span></p>
               <div class="contenu">
@@ -171,7 +171,7 @@
           </div>
           </li>
           <li class="offer-elem">
-            <img src="./assets/img/immo.png" alt="queen" class="offer-elem-img">
+            <img src="./assets/img/immo.png" alt="limo" class="offer-elem-img">
             <div class="offer-elem-text">
               <p>Limo<span>Html/Css</span></p>
               <div class="contenu">
