--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="offer-elem-text">
               <p>Florette<span>Html/Css</span></p>
               <div class="contenu">
-                <button class="btn middle"><a href="./assets/pages/café.html" target="_blank">découvrir</a></button>
+                <button class="btn middle"><a href="./assets/pages/cafe.html" target="_blank">découvrir</a></button>
                 <a href="https://github.com/GwendolineMartin/Cafe-Florette" target="_blank"><i class="fab fa-github fs-30"></i></a>
               </div>
           </div>
