--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </ul>
     </section>
     <section id="contact" class="contact">
-      <form method="post" class="contact-form">
+      <form name="contact" method="post" data-netlify="true" class="contact-form">
         <h4 class="title white">Contact</h4>
         <label for="name"></label>
         <input type="text" placeholder="Nom" name="name" id="name">
