--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Doline</title>
+    <link rel="icon" type="image/png" href="./assets/img/fav.png" />
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <link
     rel="stylesheet"
