--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Doline</title>
+    <meta name="description" content="Développeuse web full stack" />
+    <meta name="Language" CONTENT="fr" />
     <link rel="icon" type="image/png" href="./assets/img/fav.png" />
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <link
