add image link meta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Doline</title>
     <meta name="description" content="Développeuse web full stack" />
     <meta name="Language" CONTENT="fr" />
-    <meta property="og:image" content="https://www.dolinedesign.fr/assets/img/fav.png" />
+    <meta property="og:image" content="https://www.dolinedesign.fr/assets/img/favicon_Page_1.jpg" />
     <link rel="icon" type="image/png" href="./assets/img/fav.png" />
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <link
